Fix T49310: incorrect Cycles standalone normals with negative scale.